--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
                 <a href="https://raracangtip.github.io/dashboard-vera/" target="_blank" title="Project Dashboard"><h3>Dashboard</h3></a>
                 <p>Dalam proyek ini, saya mengembangkan sebuah dashboard admin berbasis web menggunakan HTML, CSS, dan JavaScript. Dashboard ini dirancang untuk memberikan visualisasi data dan kontrol yang intuitif kepada administrator dalam mengelola data dan informasi dengan mudah.</p>
             </div>
+            <div class="box">
+                <a href="#" target="_blank" title="Project Game"><i class="fas fa-game"></i></a>
+                <div class="login-link"></div>
+                <a href="https://raracangtip.github.io/VERA-SNAKE-GAME/" target="_blank" title="Project Dashboard"><h3>Snake Game</h3></a>
+                <p>Game Ular ini merupakan proyek sederhana yang dibuat menggunakan HTML, CSS, dan JavaScript. Dalam game ini, pemain mengendalikan ular untuk memakan makanan dan menghindari tabrakan dengan tubuhnya sendiri. Setiap kali ular memakan makanan, ukurannya akan bertambah dan skor akan meningkat.</p>
+            </div>
 
         </div>
     </section>
@@ -188,14 +194,14 @@
             <div class="box">
                 <img src="me.jpeg" alt="gambar 1" title="portfolio 1">
                 <div class="content">
-                    <h3>project 05</h3>
+                    <h3>pict 05</h3>
                 </div>
             </div>
 
             <div class="box">
                 <img src="psm2.jpeg" alt="gambar 1" title="portfolio 1">
                 <div class="content">
-                    <h3>project 06</h3>
+                    <h3>pict 06</h3>
                 </div>
             </div>
 
