--- a/index.html
+++ b/index.html
@@ -234,6 +234,12 @@
                     <p>Diperoleh dari Sololearn</p>
                 </div>
             </div>
+            <div class="box">
+                <img src="js intermediate.jpg" alt="Sertifikat 4">
+                <div class="content">
+                    <h3>Sertifikat Javascript Intermediate</h4>
+                    <p>Diperoleh dari Sololearn</p>
+                </div>
             <!-- Tambahkan box lain untuk sertifikat tambahan jika ada -->
         </div>
 
